# games101

./: .gitignore  README.md
assignment0/: CMakeLists.txt  main.cpp
assignment1/: CMakeLists.txt  main.cpp  rasterizer.cpp
assignment2/: CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.hpp
assignment3/: CMakeLists.txt  Texture.cpp  Texture.hpp  Triangle.hpp  main.cpp  rasterizer.cpp
assignment4/: CMakeLists.txt  main.cpp
assignment5/: CMakeLists.txt  Renderer.cpp  Triangle.hpp  global.hpp
assignment6/: BVH.cpp  BVH.hpp  Bounds3.hpp  CMakeLists.txt  Intersection.hpp  Material.hpp  Ray.hpp  Renderer.cpp  Scene.cpp  Triangle.hpp  global.hpp  main.cpp  rectangle.hpp
assignment7/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Material.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Triangle.hpp  thread_pool.hpp
assignment8/: CMakeLists.txt
assignment8/src/: application.cpp  rope.cpp
doc/: Bresenham.md  Transformation（变换）（上）.md  Transformation（变换）（下）.md  games101作业七-路径追踪相关问题.md  games101作业三问题与疑惑.md  games101作业二问题与疑惑——主要是重心坐标插值.md  games101作业五问题与疑惑.md  games101作业八相关问题.md  games101作业六-路径追踪相关问题.md  games101的作业六问题-主要是SAH.md  opencv的常见参数与傅里叶变换.md  shadow-mapping.md  view变换.md  数学问题吐槽.md  浮点数的Nan和Inf简单理解.md
